--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     flex-direction: column;
     position: relative;
     overflow: hidden;
+    margin: 0 20px;
 }
 .title-container{
     display: flex;
